*** Changelog ***

= 8.1.0 - xxxx-xx-xx =
* Fix - Resolved failing card payments when `statement_descriptor` parameter is used.

= 8.0.0 - 2024-02-29 =
* Add - Implement deferred payment intents for the Payment Element (or UPE), used on the updated checkout experience.
* Add - Implement split Payment Elements (or split UPE), splitting the payment method types under the updated checkout experience into different gateways.
* Add - Update the interface for customizing Stripe payment methods.
* Fix - When toggling on the Stripe gateway from the payment methods list, don't incorrectly redirect the merchant to Stripe settings when test mode is enabled.
* Fix - Hiding the expandable menu for UPE entirely when the feature is disabled.
* Fix - Critical error when deactivating the extension after deactivating WooCommerce.
* Fix - Add missing fee and payout information to the order details page in admin.
* Fix - Hiding "Early Access" label and "Refresh payment methods" button when UPE is disabled.
* Fix - Prevent undefined $latest_charge property warnings when signing up to subscriptions with no initial payment (eg free trials).
* Fix - Wrong status when purchasing a pre-order product with a new payment method.
* Tweak - Orders with `trash` status are not retrieving anymore when calling `get_order_by_intent_id` function.
* Tweak - Hide Stripe secret keys in the UI.
* Fix - Resolved failing payments when statement descriptor prefix starts with a number.

= 7.9.3 - 2024-02-12 =
* Fix - Resolved failing payments when statement descriptor only contains the order number.

= 7.9.2 - 2024-02-07 =
* Fix - Resolved an issue that could cause card payments to fail when providing a Bank statement description with the `statement_descriptor` parameter.
* Tweak - The Bank statement description settings in the Stripe plugin settings are no longer editable. The description is now automatically pulled from the Stripe account settings.

= 7.9.1 - 2024-01-16 =