@@ -2,6 +2,7 @@
 
 = 8.1.0 - xxxx-xx-xx =
 * Fix - Resolved failing card payments when `statement_descriptor` parameter is used.
+* Fix - PHP 8.2 deprecation warnings within the WC_Stripe_UPE_Payment_Method class.
 
 = 8.0.0 - 2024-02-29 =
 * Add - Implement deferred payment intents for the Payment Element (or UPE), used on the updated checkout experience.
